--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <header>
     <nav>
-    <a href="./">
+    <a href="./index.html">
         <img src="./images/WebStudio.svg" alt="logo">
     </a>
 
@@ -89,16 +89,13 @@
 </section>
 </main>
 <footer>
-    <a href="./">
+    <a href="./index.html">
         <img src="./images/WebStudio.svg" alt="logo">
     </a>
-    <address>м. Київ, пр-т Лесі Українки, 26</address>
-<div>
-    <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-    </ul>
-</div>
+    <address>м. Київ, пр-т Лесі Українки, 26 <br/>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br/>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+    </address>
 
 </footer>
 </body>
