--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -92,8 +92,9 @@
     <a href="./index.html">
         <img src="./images/WebStudio.svg" alt="logo">
     </a>
-    <address>м. Київ, пр-т Лесі Українки, 26 <br/>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br/>
+    <address>
+         м. Київ, пр-т Лесі Українки, 26 <br />
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
         <a href="tel:+380961111111">+38 096 111 11 11</a>
     </address>
 
