--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <header>
     <nav>
     <a href="./index.html">
-        <img src="./images/WebStudio.svg" alt="logo">
+        <img src="./images/WebStudio.svg" alt="логотип компанії">
     </a>
-
     <ul>
         <li><a href="">Студія</a></li>
         <li><a href="">Портфоліо</a></li>
@@ -57,31 +56,31 @@
 <section>
         <h2>Чим ми займаємося</h2>
         <ul>
-            <li><a href=""><img src="./images/box1.jpg" alt="box 1" width="370"></a></li>
-            <li><a href=""><img src="./images/box2.jpg" alt="box 2" width="370"></a></li>
-            <li><a href=""><img src="./images/box3.jpg" alt="box 3" width="370"></a></li>
+            <li><a href=""><img src="./images/box1.jpg" alt="фото роботи 1" width="370"></a></li>
+            <li><a href=""><img src="./images/box2.jpg" alt="фото роботи 2" width="370"></a></li>
+            <li><a href=""><img src="./images/box3.jpg" alt="фото роботи 3" width="370"></a></li>
         </ul>
     </section>
 <section>
     <h2>Наша команда</h2>
     <ul>
         <li>
-            <img src="./images/photo1.jpg" alt="photo" width="270">
+            <img src="./images/photo1.jpg" alt="фото дизайнера продукту" width="270">
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
         </li>
         <li>
-            <img src="./images/photo2.jpg" alt="photo" width="270">
+            <img src="./images/photo2.jpg" alt="фото розробника" width="270">
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
         </li>
         <li>
-            <img src="./images/photo3.jpg" alt="photo" width="270">
+            <img src="./images/photo3.jpg" alt="фото маркетолога" width="270">
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
         </li>
         <li>
-            <img src="./images/photo4.jpg" alt="photo" width="270">
+            <img src="./images/photo4.jpg" alt="фото дизайнера інтерфейсу" width="270">
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
         </li>
@@ -90,7 +89,7 @@
 </main>
 <footer>
     <a href="./index.html">
-        <img src="./images/WebStudio.svg" alt="logo">
+        <img src="./images/WebStudio.svg" alt="логотип компанії">
     </a>
     <address>
          м. Київ, пр-т Лесі Українки, 26 <br />
